test/classes/initializers/errors/iteratorInitMethodCalled.chpl
class IteratorInit {
  iter init() {}
}

proc main() {
  var i = new IteratorInit();
  writeln(i);
}
