test/classes/initializers/errors/iteratorInitMethodCalled.good
iteratorInitMethodCalled.chpl:2: error: iterators can't be initializers, please rename this iterator
